# documenteer

./: .flake8  .gitattributes  .gitignore  .npmrc  .pre-commit-config.yaml  .prettierignore  .prettierrc.yaml  .travis.yml  CHANGELOG.md  CHANGELOG.rst  CLAUDE.md  COPYRIGHT  LICENSE  MANIFEST.in  Makefile  README.md  README.rst  noxfile.py  package-lock.json  package.json  pyproject.toml  requirements.txt  setup.cfg  setup.py  tox.ini  webpack.config.js
.agents/skills/stoker-create-pr/: SKILL.md
.agents/skills/stoker-fixup/: SKILL.md
.agents/skills/stoker-implement/: SKILL.md
.claude/: .gitignore
.devcontainer/: Dockerfile  devcontainer.json
.devcontainer/stoker/: agent-entry.sh  codex-config.toml  devcontainer.json  firewall-allowlist.txt  firewall-refresh.cron  init-firewall.sh
.github/: CONTRIBUTING.md  SUPPORT.md  dependabot.yml
.github/ISSUE_TEMPLATE/: prd-task.yml  prd.yml
.github/workflows/: ci-cron.yaml  ci.yaml  dependencies.yaml
.stoker/: .gitignore  settings.toml
.stoker/prompts/: fixup.md  implement.md  rebase.md  review.md  select.md
changelog.d/: 20230911_120423_jsick_DM_40684.md  20231012_194757_jsick_DM_41179.md  20231018_165310_jsick_DM_41214.md  20231024_170151_jsick_DM_41296.md  20231026_192111_jsick_DM_41370.md  20231128_164718_jsick_DM_41781.md  20231129_140754_jsick_DM_41905.md  20231201_154001_jsick_DM_41917.md  20231212_141904_jsick_DM_42023.md  20240102_154417_jsick_1.md  20240102_155845_jsick_3.md  20240130_174434_jsick_DM_42705.md  20240213_094921_jsick_guide_examples.md  20240221_130347_jsick_DM_42967.md  20240326_120624_jsick_DM_43485.md  20240402_121001_jsick_DM_43617.md  20240411_130215_jsick_DM_43749.md  20240430_155714_jsick_DM_44137.md  20240502_153501_jsick_DM_43638.md  20240502_175753_jsick_DM_44193.md  20240711_142152_jsick_DM_44542.md  20240819_152413_jsick_DM_45803.md  20241010_133336_danfuchs_mermaid_compat.md  20250203_175511_jsick_DM_48755.md  20250219_135934_jsick_DM_49037.md  20250219_160628_jsick_DM_49037.md  20250224_102742_jsick_graphviz_ci.md  20250625_100331_jsick_DM_51536_backport.md  20250625_105553_jsick_DM_51536_backport.md  20250625_141008_jsick_DM_51536.md  20250630_113114_jsick_update_theme.md  20250703_103944_jsick_DM_51688.md  20250710_133037_jsick_DM_51727.md  20250710_145019_jsick_DM_51770.md  20250711_114447_jsick_nitpick_ignore.md  20250714_131753_jsick_DM_51779.md  20250715_141334_jsick_DM_51780.md  20250717_120814_jsick_docs.md  20250804_172950_timj_DM_52029.md  20250806_112519_jsick_update_migration.md  (+16 more)
demo/ipynb-technote/: diagram.py  index.ipynb
demo/md-technote/: .gitignore  diagram.py  index.md  technote.toml
demo/rst-technote/: Makefile  conf.py  index.rst  local.bib  technote.toml
docs/: .gitignore  Makefile  _rst_epilog.rst  api.rst  conf.py  documenteer.toml  index.rst  install.rst
docs/dev/: api.rst  dependency-policy.rst  development.rst  html-templates.rst  index.rst  release.rst  theme-assets.rst  theme.rst
docs/dev/api/: index.rst  (+7 more)
docs/guides/: badges.rst  configuration-preset.rst  configuration.rst  diagrams.rst  including-notebooks.ipynb  index.rst  markdown-primer.md  openapi.rst  organization.rst  overview.rst  page-redirects.rst  pyproject-configuration.rst  rst-epilog.rst  tabsets.rst  toml-reference.rst  video-embeds.rst
docs/pipelines/: build-overview.rst  configuration.rst  cpp-api-linking.rst  index.rst  install.rst  package-docs-cli.rst  stack-docs-cli.rst
docs/project-guides/: index.rst
docs/sphinx-extensions/: autocppapi.rst  autodocreset.rst  docushare-reference.rst  githubbibcache.rst  index.rst  jira-reference.rst  last-updated.rst  lsst-pybtex-style.rst  lssttasks.rst  openapi.rst  package-toctree.rst  remote-code-block.rst
docs/sphinxext/: lssttasks.rst
docs/technotes/: author-metadata.rst  configuration.rst  document-status.rst  edit-locally.rst  edit-on-github.rst  extensions.rst  how-your-technote-gets-published.rst  index.rst  migrate.rst  references.rst  refresh-lsst-bib.rst  start-a-technote.rst  validation.rst  wide-content.rst
documenteer/: __init__.py  _version.py  packagemetadata.py  requestsutils.py  sphinxrunner.py  utils.py
documenteer/conf/: pipelines.py  pipelinespkg.py  technote.py
documenteer/designdocs/: __init__.py  ddconfig.py
documenteer/ext/: autocppapi.py  autodocreset.py
documenteer/sphinxconfig/: stackconf.py  technoteconf.py  utils.py
documenteer/sphinxext/: __init__.py  bibtex.py  jira.py  lsstdocushare.py  mockcoderefs.py  packagetoctree.py  remotecodeblock.py  subtasks.py  utils.py
documenteer/stackdocs/: build.py  doxygen.py  doxygentag.py  packagecli.py  packages.py  pkgdiscovery.py  rootdiscovery.py  stackcli.py
licenses/: README.md  sphinx-diagrams.txt  sphinx-issue.txt
src/documenteer/: __init__.py  _packagemetadata.py  cli.py  packagemetadata.py  requestsutils.py  sphinxrunner.py  utils.py  version.py
src/sphinx_diagrams/: __init__.py
test/: README.rst
tests/: cli_test.py  conftest.py  packagemetadata_test.py  test_conf_toml.py  test_conf_utils.py  test_designdocs_ddconfig.py  test_ext_autocppapi.py  test_git_repository.py  test_refreshlsstbib.py  test_sphinxconfig_stackconf.py  test_sphinxconfig_utils.py  test_sphinxext_jira.py  test_sphinxext_lsstdocushare.py  test_sphinxext_lssttasks_taskutils.py  test_sphinxext_mockcoderefs.py  test_sphinxext_packagetoctree.py  test_sphinxext_subtasks.py  test_sphinxext_utils.py  test_stackdocs_build.py  test_stackdocs_doxygen.py  test_stackdocs_doxygentag.py  test_stackdocs_pkgdiscovery.py  test_stackdocs_rootdiscovery.py  test_technoteconf.py
tests/data/: afw.doxygen.conf
tests/ext/: autocppapi_test.py  conftest.py  diagrams_test.py  guide_build_test.py  intersphinxcache_test.py  jira_test.py  lastmodified_test.py  linkcheckservice_test.py  lsstdocushare_test.py  mockcoderefs_test.py  packagetoctree_test.py  redoc_test.py  robots_test.py  utils_test.py
tests/services/: technotemigration_test.py  technotevalidation_test.py
tests/storage/: authordb_test.py  intersphinxcacheclient_test.py  linkcheckclient_test.py  technotetoml_test.py
(+181 files in other folders)
