[metadata]
name = documenteer
description = LSST Data Management's Sphinx documentation tools, extensions, and configurations.
author = Association of Universities for Research in Astronomy, Inc. (AURA)
author_email = sqre-admin@lists.lsst.org
long_description = file: README.rst, CHANGELOG.rst, LICENSE
long_description_content_type = text/x-rst
license = MIT
url = https://documenteer.lsst.io
project_urls =
    Change log = https://documenteer.lsst.io/changelog.html
    Source code =   https://github.com/lsst-sqre/documenteer
    Issue tracker = https://github.com/lsst-sqre/documenteer/issues
classifiers =
    Development Status :: 4 - Beta
    License :: OSI Approved :: MIT License
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Intended Audience :: Developers
    Topic :: Documentation
    Topic :: Documentation :: Sphinx
    Framework :: Sphinx :: Extension
    Environment :: Console
    Natural Language :: English
    Operating System :: POSIX
keywords =
    lsst

[options]
zip_safe = False
include_package_data = True
python_requires = >=3.7
packages = find:
setup_requires =
    setuptools_scm
install_requires =
    # Documenteer's direct API dependencies
    Sphinx>=2.0.0
    PyYAML
    GitPython
    requests
    click
    # Mirrors the dependency of sphinxcontrib-bibtex 1.0.0
    pybtex>=0.20

[options.packages.find]
exclude =
    docs
    tests

[options.extras_require]
technote =
    # Theme and extensions for technotes
    lsst-dd-rtd-theme==0.2.3
    sphinxcontrib-bibtex==1.0.0
    sphinx-prompt
pipelines =
    # Theme and extensions for pipelines.lsst.io
    lsst-sphinx-bootstrap-theme>=0.2.0,<0.3.0
    numpydoc==0.8.0
    sphinx-automodapi==0.12
    sphinx-jinja==1.1.0
    sphinxcontrib-autoprogram>=0.1.5,<0.2.0
    sphinx-prompt
dev =
    # Documenteer's testing and deployment deps
    wheel>=0.29.0
    twine>=1.8.1
    pytest==4.5.0  # match lsst_distrib's pytest
    pytest-cov==2.6.1
    pytest-flake8==1.0.4
    pytest-mock==1.4.0
    pytest-mypy==0.4.2
    # Extensions for documenteer's own docs
    lsst-sphinx-bootstrap-theme>=0.2.0,<0.3.0
    numpydoc==0.8.0
    sphinx-autodoc-typehints==1.10.3
    sphinx-automodapi==0.12
    sphinx-click==2.3.1
    sphinxcontrib-autoprogram>=0.1.5,<0.2.0
    sphinx-prompt

[options.entry_points]
console_scripts =
    stack-docs = documenteer.stackdocs.stackcli:main
    package-docs = documenteer.stackdocs.packagecli:main
    build-stack-docs = documenteer.bin.buildstackdocs:run_build_cli
    refresh-lsst-bib = documenteer.bin.refreshlsstbib:run

[flake8]
max-line-length = 79

[tool:pytest]
addopts = --flake8 --mypy --cov=documenteer

[mypy]
ignore_missing_imports = True
