[metadata]
name = documenteer
description = Rubin Observatory / LSST Sphinx documentation tools, extensions, and configurations.
author = Association of Universities for Research in Astronomy, Inc. (AURA)
author_email = sqre-admin@lists.lsst.org
long_description = file: README.rst, CHANGELOG.rst, LICENSE
long_description_content_type = text/x-rst
license = MIT
url = https://documenteer.lsst.io
project_urls =
    Change log = https://documenteer.lsst.io/changelog.html
    Source code =   https://github.com/lsst-sqre/documenteer
    Issue tracker = https://github.com/lsst-sqre/documenteer/issues
classifiers =
    Development Status :: 4 - Beta
    License :: OSI Approved :: MIT License
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Intended Audience :: Developers
    Topic :: Documentation
    Topic :: Documentation :: Sphinx
    Framework :: Sphinx :: Extension
    Environment :: Console
    Natural Language :: English
    Operating System :: POSIX
keywords =
    lsst

[options]
zip_safe = False
include_package_data = True
python_requires = >=3.7
packages = find:
setup_requires =
    setuptools_scm
install_requires =
    # Documenteer's direct API dependencies
    Sphinx>=2.4.0
    PyYAML
    GitPython
    requests
    click
    sphinxcontrib-bibtex>=2.0.0  # for pybtex plugin; bibtex_bibfiles config is required.

[options.packages.find]
exclude =
    docs
    tests

[options.extras_require]
technote =
    # Theme and extensions for technotes
    lsst-dd-rtd-theme>=0.2.3,<0.3.0
    sphinx-prompt
pipelines =
    # Theme and extensions for pipelines.lsst.io
    lsst-sphinx-bootstrap-theme>=0.2.0,<0.3.0
    numpydoc
    sphinx-automodapi
    sphinx-jinja
    sphinxcontrib-autoprogram
    sphinx-prompt
    sphinxcontrib-doxylink
    sphinx-click
dev =
    twine
    # Documenteer's testing and deployment deps
    coverage[toml]
    pytest
    pytest-mock
    # Test depedendencies for analyzing HTML output
    lxml
    cssselect
    # Extensions for documenteer's own docs
    lsst-sphinx-bootstrap-theme
    numpydoc
    sphinx-autodoc-typehints
    sphinx-automodapi
    sphinx-click
    sphinxcontrib-autoprogram
    sphinx-prompt

[options.entry_points]
console_scripts =
    stack-docs = documenteer.stackdocs.stackcli:main
    package-docs = documenteer.stackdocs.packagecli:main
    build-stack-docs = documenteer.bin.buildstackdocs:run_build_cli
    refresh-lsst-bib = documenteer.bin.refreshlsstbib:run

[flake8]
max-line-length = 79
# E203: whitespace before :, flake8 disagrees with PEP 8
# W503: line break after binary operator, flake8 disagrees with PEP 8
ignore = E203, W503

[tool:pytest]
norecursedirs = node_modules

[mypy]
ignore_missing_imports = True
